# locust-kubernetes-distributed

./: LICENSE  README.md  docker-compose.yaml
django-crud-api/: .gitignore  Dockerfile  fixture.json  gunicorn.conf.py  manage.py  nginx.conf  pyproject.toml  requirements.txt  run.sh
django-crud-api/api/: admin.py  models.py  serializers.py  swagger.py  urls.py  views.py
django-crud-api/api/migrations/: 0001_initial.py
django-crud-api/books_store/: asgi.py  settings.py  urls.py  wsgi.py
grafana/: Dockerfile  dashboards.yaml  datasource.yaml
grafana/dashboards/: gunicorn-django.json  locust.json
locust-tests/: master.conf  master.dockerfile  master.sh  requirements.txt  worker.conf  worker.dockerfile  worker.sh
locust-tests-master/: Dockerfile  locust.conf  pyproject.toml  run.sh
locust-tests-master/tests/: settings.py
locust-tests-worker/: Dockerfile  locust.conf  pyproject.toml  requirements.txt  run.sh
locust-tests/tests/schemas/: author.py
locust-tests/tests/users/: author.py
prometheus/: Dockerfile  prometheus.yaml
prometheus/exporters/locust/: Dockerfile
prometheus/exporters/statsd/: Dockerfile  statsd.conf
